--- a/force-app/main/default/classes/FlowControlLoopsCollections.cls
+++ b/force-app/main/default/classes/FlowControlLoopsCollections.cls
@@ -14,10 +14,10 @@
 * in flow control, loops, and collections. By mastering these concepts, developers will be able to write more
 * efficient and effective code in their Salesforce projects.
 *
-* @author Your Name
+* @author Julie Hernandez
 */
 
-public with sharing class FlowControlLoopsCollections {
+public with sharing class FlowControlLoopsCollections
     
     /**
      * Question 1
@@ -28,8 +28,15 @@ public with sharing class FlowControlLoopsCollections {
      * @param y The second number.
      * @return "Hello World!" if x greater than y, otherwise return null.
      */
-    public static String helloWorld(Integer x, Integer y) {
-        return null; // Replace null with the variable you used to store the result
+    {public static String helloWorld(Integer x, Integer y) {
+        if (x == null || y == null) {
+            return null;
+        }
+        if (x > y) {
+            return 'Hello World!';
+        } else {
+            return null;
+        }
     }
 
     /**
@@ -41,8 +48,13 @@ public with sharing class FlowControlLoopsCollections {
      * @param age The age of the person.
      * @return true if the person is eligible to vote, false otherwise.
      */
-    public static Boolean votingEligibility(Integer age) {
-        return null; // Replace null with the variable you used to store the result
+    public static Boolean votingEligibility(Integer age) 
+    { 
+        if (age >= 18) {
+            return true;
+        } else { 
+            return false;
+        }
     }
 
     /**
@@ -56,11 +68,19 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Integer findMax(Integer num1, Integer num2) {
         // Initialize largestNum as null
-        Integer largestNum = null;
-
-        return null; // Replace null with the variable you used to store the result
+        Integer largestNum;
+        if (num1 == null || num2 == null) {
+            return null;
+        }
+        if (num1 > num2) {
+            largestNum = num1;
+        } else if (num2 > num1) {
+            largestNum = num2;
+        } else {
+            largestNum = num1; // it will not matter which one is returned because they are equal to eachother
+        }
+        return largestNum;
     }
-
 
     /**
      * Question 4
@@ -71,8 +91,18 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the number is "Positive", "Negative", or "Zero", or null if the number is null.
      */
     public static String checkNumber(Integer a) {
-        return null; // Replace null with the variable you used to store the result
+        if (a == null) { 
+            return null;
+        }
+        else if (a > 0) {
+            return 'Positive';
+        } else if (a < 0) {
+            return 'Negative';
+        } else {
+            return 'Zero';
+        }
     }
+
 
     /**
      * Question 5
@@ -82,9 +112,16 @@ public with sharing class FlowControlLoopsCollections {
      * @param a The number to check.
      * @return A string indicating whether the number is "Even" or "Odd", or null if the number is null.
      */
-    public static String checkEvenOdd(Integer a) {
-        return null; // Replace null with the variable you used to store the result
-    }
+    public static String checkEvenOdd(Integer a) 
+    { if (a == null) {
+            return null;
+        }
+        else if (Math.mod(a, 2) == 0) {
+            return 'Even';
+        } else {
+            return 'Odd';
+        }
+    }   
 
     /**
      * Question 6
@@ -94,8 +131,16 @@ public with sharing class FlowControlLoopsCollections {
      * @return A string indicating whether the input is "Empty", "Null", or "Contains Text".
      */
     public static String checkString(String a) {
-        return null; // Replace null with the variable you used to store the result
-    }
+        if (a == null) {
+            return 'Null';
+        } else if ( a == '' ) {
+            return 'Empty';
+        } else { 
+            return 'Contains Text';
+        }
+        }
+        
+    
 
     /**
      * Question 7
@@ -110,9 +155,20 @@ public with sharing class FlowControlLoopsCollections {
      * @return The grade for the given score.
      */
     public static String determineGrade(Integer score) {
-        return null; // Replace null with the variable you used to store the result
-    }
-
+        if (score == null)
+           return null;
+           else if (score >= 90){
+            return 'A';
+           }else if (score >= 80){
+            return 'B';
+           }else if (score >= 70){
+            return 'C';
+           }else if (score >= 60){
+            return 'D';
+           }else{ 
+            return 'F';
+           }
+           }
 
     /**
      * Question 8
@@ -122,14 +178,12 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of all integers up to the limit.
      */
     public static Integer sumUpToLimit(Integer intLimit) {
-        /* 
-         for (){
-            
+        Integer sum = 0;
+         for (Integer i = 1; i <= intLimit; i++) {
+            sum += i;
          }
-        */
-
-        return null; // Replace null with the variable you used to store the result
-    }
+        return sum;
+    }   
 
     /**
      * Question 9
@@ -141,13 +195,11 @@ public with sharing class FlowControlLoopsCollections {
         // Initialize the result String
 
         // Use a for loop to append 'Hello World!;' to the result string three times
-        /* 
-         for (){
-            
-         }
-        */
-
-        return null; // Replace null with the variable you used to store the result
+        String result = '';
+        for (Integer i = 1; i <= 3; i++) {
+            result += 'Hello World!; ';
+        }
+        return result;
     }
 
     /**
@@ -161,18 +213,22 @@ public with sharing class FlowControlLoopsCollections {
      * @return The new string with the inputString repeated repeatCount times.
      */
     public static String repeatString(String inputString, Integer repeatCount) {
+        if (inputString == null || repeatCount == null || repeatCount < 1) {
+            return null;
+        }
+     
         // Initialize the result String
+        String result = '';
 
         // Use a for loop to append the inputString to the result string repeatCount times
-        /*
-        for () {
-
-            // If it is not the last iteration, add a semicolon to separate the strings
+    
+        for (Integer i = 1; i <= repeatCount; i++) {
+            result += inputString;
+            if (i < repeatCount) {
+                result += '; ';
+            }
         }
-        */
-
-        // Return the final result string
-        return null; // Replace null with the variable you used to store the result
+        return result;
     }
 
     /**
@@ -182,15 +238,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return A List of integers containing the numbers 1, 2, and 3.
      */
     public static List<Integer> createAndPopulateList() {
+        if (numberList == null) {
+            return null;
+        }   
         // Create a new list of integers
-
-        // Add the integers 1, 2, and 3 to the list
-        // add 1
-        // add 2
-        // add 3
-
+        List<Integer> numberList = new List<Integer>();
+        // Add integers 1, 2, and 3 to the list
+        numberList.add(1);
+        numberList.add(2);
+        numberList.add(3);
         // Return the populated list
-        return null; // Replace null with the variable you used to store the result
+        return numberList; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -200,15 +258,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return A List of integers from 1 to 5, excluding the number 3.
      */
     public static List<Integer> createAndRemoveFromList() {
+        if (numberList == null) {
+            return null;
+        }   
         // Create a new list of integers and add numbers 1 to 5
         List<Integer> numberList = new List<Integer>{1, 2, 3, 4, 5}; //DO NOT CHANGE
-
+       
         // Remove the 3rd element (number 3) from the list
-        
+        numberList.remove (2);
         // Return the updated list
-        return null; // Replace null with the variable you used to store the result
+        return numberList; // Replace null with the variable you used to store the result
     }
-
     /**
      * Question 13
      * Create a list filled with integers based on the input parameter.
@@ -217,17 +277,17 @@ public with sharing class FlowControlLoopsCollections {
      * @return A List of integers from 1 to 'n'.
      */
     public static List<Integer> createIntegerList(Integer n) {
-        // Create a new list of integers 
-
-        /*
-        for() {
-            //add integer to the list
+        if (n == null || n < 1) {
+            return null;
         }
-        */ 
-
-        return null; // Replace null with the variable you used to store the result
+        List<Integer> result = new List<Integer>();
+        // Create a new list of integers and add integer from i to n
+         for (Integer i = 1; i <= n; i++) {
+            result.add(i);
+         }
+            return result;  // Replace null with the variable you used to store the result
     }
-
+    
     /**
      * Question 14
      * Remove duplicate values from the list of Strings.
@@ -238,11 +298,17 @@ public with sharing class FlowControlLoopsCollections {
      */
     public static Set<String> createStringSet(List<String> inputList) {
         // Create a new Set of strings
+        if (inputList == null) {
+            return null;
+        }
         Set<String> stringSet = new Set<String>();
 
         //add strings to the set
+        for (String s : inputList) {
+            stringSet.add(s);
+        }
 
-        return null; // Replace null with the variable you used to store the result
+        return stringSet; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -252,14 +318,15 @@ public with sharing class FlowControlLoopsCollections {
      * @return The sum of positive integers from the list.
      */
     public static Integer sumPositiveIntegers() {
-        List<Integer> numbers = new List<Integer>{-1, 2, -3, 4, -5, 6}; //DO NOT CHANGE
-
-        // Loop through the list of integers
-            // if the number is negative skip this iteration
-        
-
-        return null; // Replace null with the variable you used to store the result
+        List<Integer> numbers = new List<Integer>{1, -2, 3, -4, 5, -6}; //DO NOT CHANGE
+       Integer sum = 0;
+    for (Integer num : numbers) {
+        if (num > 0) {
+            sum += num;
+        }
     }
+    return sum;
+}
 
     /**
      * Question 16
